# pdf-raster

./: .clangd  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  ROADMAP_INTEL.md  cliff.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.serena/: project.yml
bench/v060/: results-testbench-i7-8700K-rtx2080super.md  results.md
bench/v070/: A.txt  D.txt  DC.txt  DCP.txt  results.md
bench/v070-testbench/: A.txt  D.txt  DC.txt  DCP.txt  results.md
bench/v07x-baselines/: local-mutool.txt  local-pdftoppm.txt
bench/v080/: A.txt  D.txt  H.txt  results.md
bench/v090/: A.txt  D.txt  H.txt  results.md
bench/v091/: A.txt  C-huff.txt  C-std.txt  V-huff.txt  V-std.txt  results.md
bench/v10/: A.txt  D-v070-baseline.txt  D.txt  V.txt  results.md
bench/v11-cuda-nocache/: results.csv  results.md
bench/v11-gpu/: results.csv  results.md
bench/v11-gpu-prefix/: results.csv  results.md
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/bench/src/contest_v11/: archive.rs  competitors.rs  events.rs  io_uring_open.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  decrypt_gate.rs  diagnostics.rs  main.rs  naming.rs  page_queue.rs  ram.rs  render.rs
crates/cli/tests/: golden.rs
crates/color/: Cargo.toml
crates/color/src/: convert.rs  lib.rs  mode.rs  pixel.rs  transfer.rs
crates/encode/: Cargo.toml
crates/encode/src/: lib.rs  pbm.rs  pgm.rs  png.rs  ppm.rs
crates/font/: Cargo.toml
crates/font/src/: bitmap.rs  cache.rs  engine.rs  face.rs  hinting.rs  key.rs  lib.rs  outline.rs  t3_cache.rs
crates/gpu/: Cargo.toml  build.rs
crates/gpu/kernels/: aa_fill.cu  aa_fill.slang  apply_soft_mask.cu  apply_soft_mask.slang  blelloch_scan.cu  blelloch_scan.slang  blit_image.cu  blit_image.slang  composite_rgba8.cu  composite_rgba8.slang  icc_clut.cu  icc_clut.slang  idct_color.cu  idct_color.slang  parallel_huffman.cu  parallel_huffman.slang  tile_fill.cu  tile_fill.slang
crates/gpu/shim/: nvjpeg2k_shim.cpp
crates/gpu/src/: blit.rs  cmyk.rs  composite.rs  cuda.rs  decode_queue.rs  fill.rs  jpeg_sof.rs  lib.rs  npp_rotate.rs  nvjpeg.rs  nvjpeg2k.rs  traits.rs
crates/gpu/src/backend/: mod.rs  params.rs
crates/gpu/src/backend/cuda/: mod.rs  page_recorder.rs  transfer.rs
crates/gpu/src/backend/vulkan/: device.rs  error.rs  memory.rs  mod.rs  pipeline.rs  recorder.rs  transfer.rs
crates/gpu/src/cache/: budget.rs  disk_tier.rs  eviction.rs  host_tier.rs  mod.rs  page_buffer.rs  promotion.rs
crates/gpu/src/jpeg/: bitreader.rs  canonical.rs  dc_chain.rs  headers.rs  mod.rs  prepass.rs  test_fixtures.rs  unstuff.rs
crates/gpu/src/jpeg_decoder/: bitstream.rs  codetable.rs  cpu_prepass.rs  cpu_reference.rs  decoder.rs  device_image.rs  dispatch_util.rs  error.rs  huffman.rs  jpeg_framing.rs  mod.rs  phase1_oracle.rs  phase2_oracle.rs  quality.rs  scan.rs
crates/gpu/src/jpeg_decoder/huffman/: corpus.rs  mod.rs
crates/gpu/src/jpeg_decoder/tests/: fixtures.rs  synthetic.rs
crates/gpu/src/lib_kernels/: aa.rs  composite.rs  huffman.rs  icc.rs  idct.rs  mod.rs  scan.rs  soft_mask.rs  tile.rs
crates/gpu/src/vaapi/: error.rs  ffi.rs  jpeg_parser.rs  mod.rs  yuv.rs
crates/gpu/tests/: backend_trait_compiles.rs  cu_vs_slang_parity.rs  cuda_backend_per_page.rs  cuda_backend_smoke.rs  vulkan_backend_smoke.rs
crates/pdf/: Cargo.toml
crates/pdf/examples/: flate_bench.rs
crates/pdf/src/: decrypt.rs  dictionary.rs  document.rs  error.rs  lexer.rs  lib.rs  linearization.rs  madvise.rs  object.rs  objstm.rs  page_tree.rs  stream.rs  xref.rs
crates/pdf_interp/: Cargo.toml
crates/pdf_interp/examples/: check_xobj.rs  dump_ops.rs  inspect_xobj.rs  render_page.rs  scan_fills.rs  smoke.rs
crates/pdf_interp/src/: lib.rs  prescan.rs  test_helpers.rs
crates/pdf_interp/src/cache/: mod.rs  prefetch.rs
crates/pdf_interp/src/content/: mod.rs  operands.rs  operator.rs  tokenizer.rs
crates/pdf_interp/src/renderer/: color.rs  font_cache.rs  gstate.rs  mod.rs  page.rs  text.rs
crates/pdf_interp/src/renderer/page/: annotations.rs  gpu_ops.rs  mod.rs  operators.rs  patterns.rs  text.rs  text_ops.rs  vk_ops.rs
crates/pdf_interp/src/resources/: cmap.rs  colorspace.rs  dict_ext.rs  font.rs  icc.rs  image.rs  mod.rs  shading.rs  tiling.rs
crates/pdf_interp/src/resources/image/: bitpack.rs  codecs.rs  colorspace.rs  inline.rs  mod.rs  raw.rs  smask.rs
crates/pdf_interp/src/resources/shading/: function.rs  mod.rs  patch.rs
crates/pdf_interp/tests/: decoder_property_fuzz.rs
crates/pdf_raster/: Cargo.toml
crates/pdf_raster/src/: decode_queue.rs  gpu_init.rs  lib.rs  render.rs
crates/pdf_raster/src/deskew/: detect.rs  mod.rs  rotate.rs
crates/pdf_raster/tests/: lazy_session.rs
crates/raster/: Cargo.toml
crates/raster/src/: bitmap.rs  clip.rs  fill.rs  glyph.rs  image.rs  lib.rs  screen.rs  state.rs  stroke.rs  testutil.rs  tiling.rs  transparency.rs  types.rs  xpath.rs
crates/raster/src/fill/: mod.rs  parallel.rs
crates/raster/src/path/: adjust.rs  flatten.rs  mod.rs
crates/raster/src/pipe/: aa.rs  blend.rs  general.rs  mod.rs  simple.rs
crates/raster/src/scanner/: iter.rs  mod.rs
crates/raster/src/shading/: axial.rs  function.rs  gouraud.rs  mod.rs  radial.rs
crates/raster/src/simd/: aa_coverage.rs  blend.rs  composite.rs  glyph_unpack.rs  mod.rs  popcnt.rs
crates/raster/src/stroke/: mod.rs  path.rs
docs/: api-reference.md  benchmarks.md  cli-reference.md  getting-started.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ccitt.rs  fuzz_jbig2.rs
scripts/: aggregate_v060.py  aggregate_v060.sh  aggregate_v070.py  aggregate_v080.py  aggregate_v090.py  aggregate_v091.py  aggregate_v10.py  bench_baselines.sh  bench_v060.sh  bench_v070.sh  bench_v080.sh  bench_v090.sh  bench_v091.sh  bench_v10.sh  release_pgo_build.sh  run_contest_v11.sh  run_contest_v11_gpu.sh  run_contest_v11_variant.sh
tests/: bench_compare.sh  bench_corpus.sh  bench_versions.sh
wiki/: Benchmarks.md  LLM-Vision-OCR-Integration.md  OCR-Integration.md  Parallel-Huffman-JPEG-GPU-Postmortem.md
(+20 files in other folders)
