[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/color",
    "crates/raster",
    "crates/encode",
    "crates/font",
    "crates/pdf_bridge",
    "crates/pdf_interp",
    "crates/pdf_raster",
    "crates/cli",
    "crates/gpu",
    "crates/bench",
]

[workspace.package]
version     = "0.2.0"
edition     = "2024"
authors     = ["Tom"]
license     = "MIT"
repository  = "https://github.com/pthomasfournet/pdf-raster"
homepage    = "https://github.com/pthomasfournet/pdf-raster"
readme      = "README.md"

[workspace.dependencies]
bytemuck   = { version = ">=1.21, <2", features = ["derive"] }
smallvec   = { version = ">=1.13, <2", features = ["union"] }
bitflags   = { version = ">=2.0,  <3" }
proptest   = { version = ">=1.0,  <2" }
cc         = { version = ">=1.0,  <2" }
tempfile   = { version = ">=3.0,  <4" }
log        = { version = ">=0.4,  <1" }
env_logger = { version = ">=0.11, <1" }

[workspace.lints.rust]
unsafe_code          = "deny"
missing_docs         = "warn"
unused_results       = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1
strip          = "symbols"
