[package]
name    = "bench"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "contest_v11"
path = "src/contest_v11/main.rs"

[dependencies]
raster     = { path = "../raster" }
color      = { path = "../color" }
pdf        = { path = "../pdf" }
pdf_interp = { path = "../pdf_interp" }
pdf_raster = { path = "../pdf_raster" }
vello_cpu  = "0.0.7"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
