[package]
name        = "rasterrocket-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "CLI — renders PDF pages to pixel files. Drop-in pdftoppm replacement. Pure Rust, zero Poppler."
keywords    = ["pdf", "raster", "cli", "pdftoppm", "renderer"]
categories  = ["command-line-utilities", "multimedia::images", "rendering"]

[[bin]]
name = "rasterrocket"
path = "src/main.rs"

[features]
# Enable GPU-accelerated AA fill and tile fill via CUDA.
gpu-aa   = ["pdf_raster/gpu-aa"]
# Enable GPU-accelerated JPEG decoding via nvJPEG.
nvjpeg   = ["pdf_raster/nvjpeg"]
# Probe NVJPEG_BACKEND_HARDWARE instead of GPU_HYBRID.  Empirical-only.
nvjpeg-hardware = ["pdf_raster/nvjpeg-hardware"]
# Enable GPU-accelerated JPEG 2000 decoding via nvJPEG2000.
nvjpeg2k = ["pdf_raster/nvjpeg2k"]
# Enable GPU ICC CMYK→RGB transform.
gpu-icc  = ["pdf_raster/gpu-icc"]
# Enable GPU-accelerated deskew rotation via CUDA NPP.
gpu-deskew = ["pdf_raster/gpu-deskew"]
# Enable VA-API hardware JPEG decoding (AMD/Intel iGPU; no CUDA required).
vaapi      = ["pdf_raster/vaapi"]
# Phase 9 device-resident image cache.  Decoded JPEGs stay in VRAM
# across pages with cross-document content-hash dedup.
cache      = ["pdf_raster/cache"]
# Vulkan compute backend (Phase 10).  Adds `--backend vulkan` to the CLI.
vulkan     = ["pdf_raster/vulkan"]
# GPU parallel-Huffman JPEG decoder.
gpu-jpeg-huffman = ["pdf_raster/gpu-jpeg-huffman"]

[dependencies]
pdf_raster  = { package = "rasterrocket",        path = "../pdf_raster", version = "1.0" }
encode      = { package = "rasterrocket-encode", path = "../encode",     version = "1.0" }
color       = { package = "rasterrocket-color",  path = "../color",      version = "1.0" }
raster      = { package = "rasterrocket-render", path = "../raster",     version = "1.0" }
clap        = { version = "4", features = ["derive"] }
rayon       = "1"
log         = { workspace = true }
env_logger  = { workspace = true }
mimalloc    = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
# cli binary: unsafe_code only allowed in pdf_bridge (the FFI crate)
unsafe_code    = "deny"
missing_docs   = "allow"   # binary crate; public docs are not required
unused_results = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
