[package]
name        = "rasterrocket-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "CLI — renders PDF pages to pixel files. Drop-in pdftoppm replacement. Pure Rust, zero Poppler."
keywords    = ["pdf", "raster", "cli", "pdftoppm", "renderer"]
categories  = ["command-line-utilities", "multimedia::images", "rendering"]

[[bin]]
name = "rrocket"
path = "src/main.rs"

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["pdf_raster/bundled"]
# GPU features require building from the git repository where the
# internal `rasterrocket-gpu` crate is available.  They are not exposed on crates.io.
# These stubs keep cfg(feature = "…") gates valid at compile time.
nvjpeg           = []
nvjpeg2k         = []
vaapi            = []
cache            = []

[dependencies]
pdf_raster  = { package = "rasterrocket",        path = "../pdf_raster", version = "1.0" }
encode      = { package = "rasterrocket-encode", path = "../encode",     version = "1.0" }
color       = { package = "rasterrocket-color",  path = "../color",      version = "1.0" }
raster      = { package = "rasterrocket-render", path = "../raster",     version = "1.0" }
clap        = { version = "4", features = ["derive"] }
rayon       = "1"
log         = { workspace = true }
env_logger  = { workspace = true }
mimalloc    = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
# cli binary: unsafe_code only allowed in pdf_bridge (the FFI crate)
unsafe_code    = "deny"
missing_docs   = "allow"   # binary crate; public docs are not required
unused_results = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
