[package]
name             = "color"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
