[package]
name             = "encode"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
color  = { path = "../color" }
raster = { path = "../raster" }

# PNG output — pure Rust, no system libs required.
png = "0.17"

[dev-dependencies]
# tempfile for integration tests that write real files.
tempfile = "3"

[lints]
workspace = true
