[package]
name             = "font"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
color    = { path = "../color" }
raster   = { path = "../raster" }
# freetype-rs 0.38 wraps FreeType 2.x with a safe API; the system library
# is linked via pkg-config (libfreetype-dev must be installed).
freetype-rs = "0.38"
# quick_cache gives a sharded concurrent LRU cache where reads do not
# require write locks (unlike dashmap + lru::LruCache, where get() takes
# &mut self and therefore serializes reads within each shard).
quick_cache = "0.6.21"

[lints]
workspace = true
