[package]
name    = "gpu"
version = "0.1.0"
edition = "2024"

[features]
# Enable GPU-accelerated JPEG decoding via NVIDIA nvJPEG.
# Requires libnvjpeg.so to be present at link time (ships with CUDA 12).
nvjpeg = []
# Enable GPU vs CPU parity tests (requires a CUDA device at test time).
# cargo test -p gpu --lib --features gpu-validation -- aa_fill_gpu_vs_cpu
gpu-validation = []

[dependencies]
cudarc   = { version = "0.19", features = ["cuda-12080"] }
color    = { path = "../color" }
log      = "0.4"
bytemuck = { workspace = true }

# unsafe_code must be "allow" here because cudarc requires unsafe blocks.
# We do not inherit workspace lints so we can override unsafe_code.
[lints.rust]
unsafe_code      = "allow"
missing_docs     = "warn"
unused_results   = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
