[package]
name    = "gpu"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "threshold_bench"
path = "src/bin/threshold_bench.rs"

[features]
# Enable GPU-accelerated JPEG decoding via NVIDIA nvJPEG.
# Requires libnvjpeg.so to be present at link time (ships with CUDA 12).
nvjpeg = []
# Enable GPU-accelerated JPEG 2000 decoding via NVIDIA nvJPEG2000.
# Requires libnvjpeg2k.so at link time (installed at
# /usr/lib/x86_64-linux-gnu/libnvjpeg2k/12/ on this system).
nvjpeg2k = []
# Enable GPU rotation via CUDA NPP nppiRotate_8u_C1R_Ctx.
# Requires libnppig.so + libnppc.so + libcudart.so (all ship with CUDA 12).
gpu-deskew = []
# Enable GPU vs CPU parity tests (requires a CUDA device at test time).
# cargo test -p gpu --lib --features gpu-validation -- aa_fill_gpu_vs_cpu
gpu-validation = []
# Enable VA-API hardware JPEG decoding for AMD/Intel iGPU and discrete GPU on Linux.
# Requires libva.so.2 and libva-drm.so.2 (Mesa / intel-media-driver).
vaapi = []

[dependencies]
cudarc   = { version = "0.19", features = ["cuda-12080"] }
color    = { path = "../color" }
log      = "0.4"
bytemuck = { workspace = true }

# unsafe_code must be "allow" here because cudarc requires unsafe blocks.
# We do not inherit workspace lints so we can override unsafe_code.
[lints.rust]
unsafe_code      = "allow"
missing_docs     = "warn"
unused_results   = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
