[package]
publish = false
name        = "rasterrocket-parser"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
readme.workspace      = true
description = "Lazy, zero-copy PDF file parser for the rasterrocket render pipeline"
keywords    = ["pdf", "parser", "mmap", "zero-copy", "document"]
categories  = ["parser-implementations", "encoding"]

[dependencies]
flate2      = { version = "1" }
libdeflater = { version = "1", optional = true }
memmap2     = { version = "0.9" }
weezl       = { version = "0.1" }
log         = { workspace = true }
tempfile    = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["libdeflate"]
libdeflate = ["dep:libdeflater"]
