[package]
name    = "pdf_interp"
version = "0.1.0"
edition = "2024"

[features]
# Enable GPU-accelerated JPEG decoding via nvJPEG for DCTDecode streams.
# Requires CUDA 12 and a NVIDIA GPU.  Falls back to zune-jpeg when the GPU
# context is unavailable or the image is below the dispatch threshold.
nvjpeg = ["gpu/nvjpeg"]

[dependencies]
raster = { path = "../raster" }
color  = { path = "../color" }
font   = { path = "../font" }
encode = { path = "../encode" }
gpu    = { path = "../gpu", optional = true }
lopdf  = "0.40"
log    = { workspace = true }
fax = "0.2.6"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
jpeg2k      = { version = "0.10.1", default-features = false, features = ["image", "openjpeg-sys"] }
hayro-jbig2 = { version = "0.3.0", default-features = false }

[dev-dependencies]
env_logger = { workspace = true }


[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
