[package]
publish = false
name        = "rasterrocket-interp"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "Native PDF content-stream interpreter — poppler-free render path for rasterrocket"
keywords    = ["pdf", "interpreter", "renderer", "fonts", "images"]
categories  = ["parser-implementations", "rendering", "multimedia::images"]

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["font/bundled"]
# GPU features require building from the git repository where the
# internal `rasterrocket-gpu` crate is available.  They are not exposed on crates.io.
# These stubs keep cfg(feature = "…") gates valid at compile time.
nvjpeg           = []
nvjpeg2k         = []
vaapi            = []
gpu-aa           = []
gpu-icc          = []
cache            = []
vulkan           = []
gpu-jpeg-huffman = []

[dependencies]
raster = { package = "rasterrocket-render", path = "../raster", version = "1.0" }
color  = { package = "rasterrocket-color",  path = "../color",  version = "1.0" }
font   = { package = "rasterrocket-font",   path = "../font",   version = "1.0" }
encode = { package = "rasterrocket-encode", path = "../encode", version = "1.0" }
pdf    = { package = "rasterrocket-parser", path = "../pdf",    version = "1.0" }
log    = { workspace = true }
fax = "0.2.6"
hayro-ccitt = "0.3.0"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
jpeg2k      = { version = "0.10.1", default-features = false, features = ["image", "openjpeg-sys"] }
hayro-jbig2 = { version = "0.3.0", default-features = false }
moxcms = "0.8.1"

[dev-dependencies]
env_logger       = { workspace = true }


[lints.rust]
unsafe_code     = "deny"
missing_docs    = "warn"
unused_results  = "warn"  # parity with workspace defaults; the local block overrides them
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
