[package]
name        = "rasterrocket"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "PDF to pixel buffer — pure Rust, zero Poppler, zero subprocesses. Vulkan and CUDA GPU backends."
keywords    = ["pdf", "raster", "ocr", "renderer", "vulkan"]
categories  = ["multimedia::images", "rendering", "parser-implementations"]

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["pdf_interp/bundled"]
# GPU features require building from the git repository where the
# internal `rasterrocket-gpu` crate is available.  They are not exposed on crates.io.
# These stubs keep cfg(feature = "…") gates valid at compile time.
nvjpeg           = []
nvjpeg2k         = []
vaapi            = []
gpu-aa           = []
gpu-icc          = []
gpu-deskew       = []
cache            = []
vulkan           = []
gpu-jpeg-huffman = []
gpu-validation   = []

[dependencies]
pdf_interp  = { package = "rasterrocket-interp",  path = "../pdf_interp", version = "1.0" }
raster      = { package = "rasterrocket-render",  path = "../raster",     version = "1.0" }
color       = { package = "rasterrocket-color",   path = "../color",      version = "1.0" }
pdf         = { package = "rasterrocket-parser",  path = "../pdf",        version = "1.0" }
rayon       = "1"
log         = { workspace = true }

[dev-dependencies]
rasterrocket = { path = ".", version = "1.0" }

[lints.rust]
unsafe_code    = "warn"   # deskew rotate may need unsafe for SIMD; explicit allow per site
missing_docs   = "warn"
unused_results = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
