[package]
name             = "raster"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default     = ["simd-avx2"]
simd-avx2   = []                   # AVX2 blend / fill paths
simd-avx512 = ["simd-avx2"]       # adds vpopcntq AA counter (requires avx512vpopcntdq)
nightly-sve2 = []                  # SVE2 popcount tier (aarch64 only; requires nightly + stdarch_aarch64_sve)
rayon       = ["dep:rayon"]        # tile-level rayon parallelism for fill

[dependencies]
color    = { path = "../color" }
bytemuck = { workspace = true }
bitflags = { workspace = true }
rayon    = { version = "1", optional = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
